--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ XS-Python-Version: >= 2.6
 Package: mastermind-minion
 Architecture: amd64
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends},
- python-tornado, sqlite3
+ python-tornado, sqlite3, python-sqlalchemy
 XB-Python-Version: >= 2.6
 Description: Elliptics instance resident daemon designated for mastermind
  commands execution
