--- a/etc/mastermind-minion-default.conf
+++ b/etc/mastermind-minion-default.conf
@@ -3,6 +3,9 @@ debug = False
 port = 8081
 pidfile = /var/run/mastermind-minion/minion
 
+# set to True to allow storing core dumps for child processes
+dump_core = False
+
 [auth]
 key = ReplaceMePlease
 rsync_password = rsync_daemon_password
