Update example config

--- a/etc/mastermind-minion-default.conf
+++ b/etc/mastermind-minion-default.conf
@@ -1,10 +1,16 @@
 [common]
 debug = False
 port = 8081
+
+# base path for elliptics node backends
+base_path = /srv/elliptics
 pidfile = /var/run/mastermind-minion/minion
 
 # set to True to allow storing core dumps for child processes
 dump_core = False
+
+[db]
+uri = sqlite:////var/lib/mastermind-minion/minions.db
 
 [auth]
 key = ReplaceMePlease
