Improve logs: send part of logs to new minion.command logger
You NEED to specify configuration for one more logger:
not only "minion", but also "minion.command".
Handlers of "minion.command" logger can use "job_id" and "task_id"
in it's own formatters to show more detail information.

--- a/etc/logging-default.conf
+++ b/etc/logging-default.conf
@@ -3,6 +3,10 @@
         "formatters": {
             "default": {
                 "class": "logging.Formatter"
+            },
+            "default-command": {
+                "class": "logging.Formatter",
+                "fmt": "%(asctime)s %(name)-15s %(levelname)-10s %(job_id)s::%(task_id)s %(message)s"
             }
         },
         "handlers": {
@@ -10,12 +14,22 @@
                 "class": "logging.handlers.SysLogHandler",
                 "formatter": "default",
                 "level": "DEBUG"
+            },
+            "default-command": {
+                "class": "logging.handlers.SysLogHandler",
+                "formatter": "default-command",
+                "level": "DEBUG"
             }
         },
         "loggers": {
             "": {
                 "handler": ["default"],
                 "level": "DEBUG"
+            },
+            "minion.command": {
+                "handler": ["default-command"],
+                "level": "DEBUG",
+                "propagate": false
             }
         }
     }
