Add check group location command

--- a/etc/mastermind-minion-default.conf
+++ b/etc/mastermind-minion-default.conf
@@ -15,3 +15,6 @@ uri = sqlite:////var/lib/mastermind-minion/minions.db
 [auth]
 key = ReplaceMePlease
 rsync_password = rsync_daemon_password
+
+[elliptics]
+monitor_port = 10025
