Add monitor port request timeout configuration

--- a/etc/mastermind-minion-default.conf
+++ b/etc/mastermind-minion-default.conf
@@ -18,3 +18,5 @@ rsync_password = rsync_daemon_password
 
 [elliptics]
 monitor_port = 10025
+monitor_port_connect_timeout = 5
+monitor_port_request_timeout = 5
